--- a/styles/Layout.module.css
+++ b/styles/Layout.module.css
@@ -16,3 +16,20 @@
   align-items: center;
   font-size: 1.25rem;
 }
+
+@media (min-width: 360px) {
+  .main {
+    width: 320px;
+  }
+}
+@media (min-width: 660px) {
+  .main {
+    width: 620px;
+  }
+}
+
+@media (min-width: 1000px) {
+  .main {
+    width: 960px;
+  }
+}
