--- a/styles/Verb.module.css
+++ b/styles/Verb.module.css
@@ -1,9 +1,12 @@
+.wrapper {
+  width: 100%;
+}
 .flex {
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: space-between;
   flex-wrap: wrap;
-  max-width: 800px;
+  width: 100%;
   margin-top: 0.5rem;
 }
 
