--- a/styles/SelectItem.module.css
+++ b/styles/SelectItem.module.css
@@ -1,34 +1,30 @@
-.bold {
-  font-weight: 700;
-}
-
-.text {
-  font-weight: 300;
-}
-
 .item {
-  text-align: center;
-  color: inherit;
-  text-decoration: none;
-  transition: color 0.15s ease, border-color 0.15s ease;
+  box-sizing: border-box;
+  display: inline-block;
+  height: 50px;
+  margin: 4px;
+  padding: 6px;
+  white-space: nowrap;
+  opacity: 0.9;
+  transition: all 0.3s;
+  font-weight: 300;
+  border: 1px solid #eaeaea;
+  color: #000000d9;
 }
-
-.card:hover,
-.card:focus,
-.card:active {
+.item:hover {
   color: #0070f3;
-  border-color: #0070f3;
+}
+.checked {
+  font-weight: 700;
+  opacity: 1;
+  margin: 2px;
+  padding: 4px;
+  background-color: #1890ff;
+  color: #fff;
 }
 
-.card h3 {
-  margin: 0 0 1rem 0;
-  font-size: 1.5rem;
-}
-
-.card p {
-  margin: 0;
-  font-size: 1.25rem;
-  line-height: 1.5;
+.checked:hover {
+  color: #fff;
 }
 
 @media (max-width: 600px) {
@@ -49,6 +45,9 @@
 .scrollable {
   height: 100%;
   overflow-y: auto;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
 .scrollable div {
