--- a/styles/globals.css
+++ b/styles/globals.css
@@ -22,5 +22,11 @@ p {
 
 input,
 button {
+  background: none;
+  color: inherit;
   border: none;
+  padding: 0;
+  font: inherit;
+  cursor: pointer;
+  outline: inherit;
 }
