--- a/styles/components/Layout.module.css
+++ b/styles/components/Layout.module.css
@@ -5,16 +5,19 @@
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
+  background: #ececec;
 }
 
 .main {
-  padding: 5rem 0;
+  padding: 20px;
+  box-sizing: border-box;
   flex: 1;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
   font-size: 1.25rem;
+  background: #fafafa;
 }
 
 @media (min-width: 360px) {
