--- a/styles/components/Nav.module.css
+++ b/styles/components/Nav.module.css
@@ -1,6 +1,6 @@
 .nav {
-  height: 50px;
-  padding: 10px;
+  height: 80px;
+  padding: 0 10px;
   background: #000;
   color: #fff;
   display: flex;
@@ -9,12 +9,35 @@
 }
 
 .nav ul {
+  padding: 0;
+  margin: 0;
   display: flex;
   justify-content: center;
   align-items: center;
   list-style: none;
 }
 
-.nav ul li a {
-  margin: 5px 15px;
+.linkText {
+  margin: 0 10px;
+  font-size: 1.2rem;
+}
+
+@media (max-width: 860px) {
+  .nav {
+    height: 70px;
+  }
+  .linkText {
+    font-size: 1rem;
+    margin: 0 8px;
+  }
+}
+
+@media (max-width: 460px) {
+  .nav {
+    height: 60px;
+  }
+  .linkText {
+    font-size: 0.8rem;
+    margin: 0 6px;
+  }
 }
