--- a/styles/pages/admin/Admin.module.css
+++ b/styles/pages/admin/Admin.module.css
@@ -4,5 +4,11 @@
 
 .formItemSub {
     display: flex;
-    justify-content: center;
+    justify-content: left;
+}
+
+.formSubContainer {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
 }
