--- a/styles/pages/Verb.module.css
+++ b/styles/pages/Verb.module.css
@@ -27,3 +27,9 @@
   border-radius: 2px;
   transition: all 0.3s;
 }
+
+.checkboxWrapper {
+  display: flex;
+  align-items: center;
+  justify-content: left;
+}
