feat: usefetch for idioms and likes and loading

--- a/styles/pages/Verb.module.css
+++ b/styles/pages/Verb.module.css
@@ -33,3 +33,10 @@
   align-items: center;
   justify-content: left;
 }
+
+.loading {
+  flex: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
