--- a/styles/pages/Idiom.module.css
+++ b/styles/pages/Idiom.module.css
@@ -54,3 +54,11 @@
   align-items: center;
   justify-content: left;
 }
+
+.loading {
+  flex: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 160px;
+}
