--- a/styles/components/ExplanationCard.module.css
+++ b/styles/components/ExplanationCard.module.css
@@ -6,24 +6,30 @@
   border-radius: 2px;
   box-sizing: border-box;
   padding: 10px;
-  margin: 10px
+  margin: 10px;
+}
+.head {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+}
+.head > * {
+  margin-right: 30px;
 }
 
-.head {
+.title {
   color: #000000d9;
   font-weight: 700;
   font-size: 20px;
   line-height: 1.5715;
 }
 
-
-.headSub {
+.subtitle {
   color: #000000d9;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5715;
 }
-
 
 .text {
   color: #000000d9;
@@ -45,5 +51,16 @@
   border: 1px solid #d9d9d9;
   border-radius: 2px;
   opacity: 0.9;
-  transition: all .3s;
+  transition: all 0.3s;
+}
+
+.likeBox {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.count {
+  margin: 0;
+  padding: 0;
 }
