--- a/styles/components/common/Notification.module.css
+++ b/styles/components/common/Notification.module.css
@@ -1,16 +1,34 @@
-.container {
+.outter {
+  position: fixed;
+  text-align: left;
+  left: 0;
+  right: 0;
+}
+
+.inner {
+  display: inline-block;
   position: fixed;
   height: 32px;
   padding: 4px 15px;
-  bottom: 20px;
   background-color: #f2f4f5;
   border: 1px solid #f0f0f0;
   opacity: 0;
-  left: -120px;
+  left: 20px;
+  top: -80px;
   transition: 0.4s ease-in;
+  box-shadow: 0 3px 6px -4px #0000001f, 0 6px 16px #00000014, 0 9px 28px 8px #0000000d;
 }
 
-.containerOpen {
+.open {
   opacity: 1;
-  transform: translateX(120px);
+  transform: translateY(120px);
+}
+
+.text {
+  text-overflow: ellipsis;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+  overflow: hidden; 
+  width: 180px;
+  white-space: nowrap;
 }
