--- a/styles/components/Modal.module.css
+++ b/styles/components/Modal.module.css
@@ -7,6 +7,7 @@
     z-index: 1000;
     height: 100%;
     background-color: #00000073;
+    box-shadow: 0 3px 6px -4px #0000001f, 0 6px 16px #00000014, 0 9px 28px 8px #0000000d;
 }
 
 .modal {
