--- a/styles/components/Member.module.css
+++ b/styles/components/Member.module.css
@@ -1,9 +1,16 @@
+.contianer {
+  width: 320px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .input {
   box-sizing: border-box;
-  margin: 0;
+  margin: 5px 0px;
   position: relative;
   display: inline-block;
-  width: 200px;
+  width: 100%;
   height: 40;
   margin-bottom: 10px;
   min-width: 0;
@@ -52,4 +59,12 @@
   background: #fff;
   border-color: #ff7875;
   opacity: 0.5;
+}
+
+.err {
+  margin: 0px 10px;
+  color: #ff7875;
+  font-size: 10px;
+  word-wrap: break-word;
+  align-self: flex-start;
 }
