feat: seperate like card head, body components

--- a/styles/components/LikeList.module.css
+++ b/styles/components/LikeList.module.css
@@ -64,3 +64,16 @@
     margin-bottom: 40px;
   }
 }
+
+.subHead {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: baseline;
+  flex-wrap: wrap;
+}
+
+
+.subTitle {
+  width: 150px;
+}
