--- a/styles/components/LinkCard.module.css
+++ b/styles/components/LinkCard.module.css
@@ -3,6 +3,7 @@
   display: flex;
   flex-direction: column;
   min-width: 275px;
+  min-height: 200px;
   padding: 5px;
   color: rgba(0, 0, 0, 0.87);
   transition: box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
